# locker

./: .gitpod.yml  Cargo.toml  README.md
src/: encryptFile.rs  encrypt_file.rs  main.rs  symmetric.rs  test.rs
src/scripts/tests/: build.rs
